Added: test data for internship.
