# demo/controllers/viron.js
@@ -94,6 +94,7 @@ const show = (req, res) => {
             id: 'quickview',
             name: 'クイックビュー',
             components: [
+              genComponent('Calendar', 'get', '/stats/calendar', 'calendar'),
               genComponent('DAU', 'get', '/stats/dau', constant.VIRON_STYLE_NUMBER, 5),
               genComponent('MAU', 'get', '/stats/mau', constant.VIRON_STYLE_NUMBER, 30),
               genComponent('Chart(area)', 'get', '/stats/chart/area', constant.VIRON_STYLE_CHART),
