# demo/swagger/swagger.yaml
@@ -337,6 +337,17 @@ definitions:
         type: string
     type: object
 
+  StatsCalendar:
+    example:
+      value: 12345678
+    properties:
+      value:
+        format: int64
+        type: integer
+    required:
+    - value
+    type: object
+
   StatsNumber:
     example:
       value: 12345678
@@ -1956,6 +1967,20 @@ paths:
       summary: サインアウト
       tags:
       - auth
+
+  /stats/calendar:
+    get:
+      x-swagger-router-controller: stats
+      description: Calenader
+      operationId: stats#calendar
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/StatsCalendar'
+      summary: カレンダー
+      tags:
+      - stats
 
   /stats/dau:
     get:
